--- a/DropFade.html
+++ b/DropFade.html
@@ -12,14 +12,14 @@
 <body>
     <!--Creating the content container-->
     <h2 class="sentence">
-      <span>Discipline comes from</span>
+      <span>Bunny Discipline comes from</span>
     <div class="words">
-        <span>commitment</span>
-        <span>perseverence</span>
-        <span>dedication</span>
-        <span>training</span>
-        <span>aspiration</span>
-        <span>education</span>
+        <span>bunny commitment</span>
+        <span>bunny perseverence</span>
+        <span>bunny dedication</span>
+        <span>bunny training</span>
+        <span>bunny aspiration</span>
+        <span>bunny education</span>
     </div>
   </h2>
 
